Bug 165815 - Base - crashes on saving edited table
Summary: Base - crashes on saving edited table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected
: 165398 165902 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-03-19 02:23 UTC by Adam664
Modified: 2025-03-27 15:16 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
simple db doc (3.34 KB, application/vnd.oasis.opendocument.database)
2025-03-19 02:24 UTC, Adam664
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam664 2025-03-19 02:23:28 UTC
Description:
Open an hsqldb database document, make a change to a table, when save is pressed it crashes. 

Steps to Reproduce:
1. Open the attached database document
2. Click on Tables, then Table1 to edit Table1
3. Add some information so that you can save, i.e. add an ID as 3
4. Click the save button(save current record)

Actual Results:
LibreOffice crashes and the Document Recovery dialog appears

Expected Results:
The changes are saved


Reproducible: Always


User Profile Reset: Yes

Additional Info:
N.A.
Comment 1 Adam664 2025-03-19 02:24:17 UTC
Created attachment 199886 [details]
simple db doc
Comment 2 Adam664 2025-03-19 02:28:51 UTC
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2b1f913c8ea90c60fed50596e27e2328b1a7d788
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 m_a_riosv 2025-03-19 14:52:53 UTC
(In reply to Adam664 from comment #0)
> ..........
> 3. Add some information so that you can save, i.e. add an ID as 3
Sorry, what it means to add an ID as 3, an ID already exists.
>....

Other editing actions doesn't crash for me.
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e1c7923596f39bac8ce926b56a2450911ffde4d8
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-GB
Calc: CL threaded
Comment 4 Adam664 2025-03-19 15:50:32 UTC
1. Once in the Table View Data window by following the steps to reproduce
2. Click on the third row of the data table, first column(the ID column)
3. Add a number, any number will work
4. Click Save
5. Crash

The idea is to make a change/add information to the table, then you will be able to save it, the save is what is causing the crash.
Comment 5 Adam664 2025-03-19 17:00:47 UTC
Bisected using the linux-64-25.8 repo with the following result

commit 825e51aff181ad7bc69d2421bf4f18ef8145149f
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Mon Mar 3 22:38:38 2025 +0100

    source 09e2627a83d4769983c39fb2cb260e11fce354f3
Comment 6 Adam664 2025-03-19 17:03:33 UTC
Adding Cc: to noelgrandin@gmail.com

Leaving as UNCOMFIRMED for now since we haven't had another confirmation on Linux.
Comment 7 Adam664 2025-03-19 18:05:06 UTC
When I manually revert the changes in dbaccess/source/ui/browser/brwctrlr.cxx
from 09e2627a83d4769983c39fb2cb260e11fce354f3 the problem is solved.
Comment 8 Brandon H. 2025-03-19 23:43:13 UTC
Thank you for reporting the bug. I am able to reproduce the bug on both Linux and Windows 11.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7b9e27da2033192c628b23e4e1686209e951dadb
CPU threads: 4; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

and

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 894563ee0e4032019623a97c313af3d833863b1f
CPU threads: 8; OS: Windows 11 X86_64 (build 22631); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 9 Commit Notification 2025-03-20 10:14:39 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c8f9ede9ecd14ed2679d51fe4c1cc3ed1496c75e

tdf#165815 Base crashes on saving edited table

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Adam664 2025-03-20 15:30:15 UTC
Thank you for the patch Noel! Confirming that the issue is resolved.
Comment 11 Xisco Faulí 2025-03-25 13:39:56 UTC
*** Bug 165902 has been marked as a duplicate of this bug. ***
Comment 12 V Stuart Foote 2025-03-25 14:10:33 UTC
Confirmed dupe bug 165902 for the DataSource Viewer is fixed as well with the 2025-03-24 TB77 nightly 

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a2741c9e6083016bba82fa9be06e157a18aaaf07
CPU threads: 28; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 13 Commit Notification 2025-03-25 15:54:55 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d57c777801c25ea55150329c59910d92a39148c5

tdf#165815: sw: Add UItest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Xisco Faulí 2025-03-27 15:16:16 UTC
*** Bug 165398 has been marked as a duplicate of this bug. ***