tdf#165815 Base crashes on saving edited table

thanks to adamseskunas for finding the source file that contained the
bug

regression from
    commit 09e2627a83d4769983c39fb2cb260e11fce354f3
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Feb 17 11:06:55 2025 +0200
    use more concrete UNO types in some local vars

Change-Id: I6884e5b7b20e45e3e7cfd11d5aa20d6e03ae34d9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183151
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins